--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "platfoxbot"
 description = "(Platinum Foxes Bot) twitter to telegram image reposter"
-version = "2.0.0"
+version = "2.1.0"
 edition = "2021"
 
 [profile.release]
@@ -14,6 +14,6 @@ serde = { version = "*", features = [ "derive" ] }
 serde_json = "*"
 toml = "*"
 reqwest = { version = "*", features = [ "blocking" ] }
-clap = { version = "*", features = [ "derive" ] }
+clap = { version = "3", features = [ "derive" ] }
 #tokio = { version = "*", features = [ "full" ] }
 #async-trait = "*"
