--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,18 @@
 [package]
 name = "platfoxbot"
 description = "(Platinum Foxes Bot) twitter to telegram image reposter"
-version = "2.1.0"
+version = "2.2.0"
 edition = "2021"
 
 [profile.release]
 strip = true
-#opt-level = "z"
 lto = true
 
 [dependencies]
-serde = { version = "*", features = [ "derive" ] }
-serde_json = "*"
-toml = "*"
-reqwest = { version = "*", features = [ "blocking" ] }
+serde = { version = "1", features = [ "derive" ] }
+serde_json = "1"
+toml = "0.5"
+reqwest = { version = "0.11", features = [ "blocking" ] }
 clap = { version = "3", features = [ "derive" ] }
-#tokio = { version = "*", features = [ "full" ] }
-#async-trait = "*"
+tokio = { version = "1", features = [ "rt", "macros" ] }
+futures = "0.3"
