--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ reqwest = { version = "0.11", features = [ "blocking" ] }
 clap = { version = "3", features = [ "derive" ] }
 tokio = { version = "1", features = [ "rt", "macros" ] }
 futures = "0.3"
+regex = "1"
+lazy_static = "1.4"
